jekyll, github pages

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!doctype html>
 
 <html lang="pl">
@@ -37,31 +39,31 @@
 <body class="invert-header">
   <div class="global-container"> 
 
-    <?php include ("moduls/header.php"); ?>
+    {% include header.html %}
     
     <div class="sections-container">
-       <?php include ("moduls/section-cover.php"); ?>
-       <?php include ("moduls/section-intro.php"); ?>
-       <?php include ("moduls/section-community-voices.php"); ?>
-       <?php include ("moduls/section-civic-tech.php"); ?>
-       <?php include ("moduls/section-events.php"); ?>
-       <?php include ("moduls/section-event-1.php"); ?>
-       <?php include ("moduls/section-event-2.php"); ?>
-       <?php include ("moduls/section-event-3.php"); ?>
-       <?php include ("moduls/section-event-4.php"); ?>
-       <?php include ("moduls/section-build.php"); ?>
-       <?php include ("moduls/section-assets-declarations.php"); ?>
-       <?php include ("moduls/section-konsultimi-publik.php"); ?>
-       <?php include ("moduls/section-moonsheep.php"); ?>
-       <?php include ("moduls/section-ted2.php"); ?>
-       <?php include ("moduls/section-public-procurement.php"); ?>
-       <?php include ("moduls/section-social-media-scraper.php"); ?>
-       <?php include ("moduls/section-research.php"); ?>
-       <?php include ("moduls/section-workshops.php"); ?>
-       <?php include ("moduls/section-workshops-overview.php"); ?>
-       <?php include ("moduls/section-working-groups.php"); ?>
-       <?php include ("moduls/section-whats-next.php"); ?>
-       <?php include ("moduls/section-bye.php"); ?>
+       {% include section-cover.html %}
+       {% include section-intro.html %}
+       {% include section-community-voices.html %}
+       {% include section-civic-tech.html %}
+       {% include section-events.html %}
+       {% include section-event-1.html %}
+       {% include section-event-2.html %}
+       {% include section-event-3.html %}
+       {% include section-event-4.html %}
+       {% include section-build.html %}
+       {% include section-assets-declarations.html %}
+       {% include section-konsultimi-publik.html %}
+       {% include section-moonsheep.html %}
+       {% include section-ted2.html %}
+       {% include section-public-procurement.html %}
+       {% include section-social-media-scraper.html %}
+       {% include section-research.html %}
+       {% include section-workshops.html %}
+       {% include section-workshops-overview.html %}
+       {% include section-working-groups.html %}
+       {% include section-whats-next.html %}
+       {% include section-bye.html %}
     </div>
 
   </div>
